# jiffy-compression

./: .gitignore  LICENSE  README.md  index.html  jiffy.py  pyproject.toml  test.py
data/: README.txt
examples/: dataset_reader.py  decode_from_file.py  enc-dec-diff.txt  encode_to_file.py
jiffy/: __init__.py  jiffy.py
src/jiffyCodec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/jiffy_lidar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test.py
